--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run tests
         # Запускаем тесты
-        run: coverage run src/tests.py
+        run: coverage run DevTools 5/TestCalc.py
       - name: Tests report
         run: coverage report
 
