--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,7 +4,8 @@
 name: Python application
 on:
   commit_comment:
-   - main
+    branches:
+    - main
   # Запуск только при публиковании нового релиза
 
 jobs:
