--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: '3.8'
           architecture: 'x64'
-      - name: Install requirements
+      - name: Install requirements.txt
         # Устанавливаем зависимости
         run: pip install -r requirements.txt
       - name: Run tests
