--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,7 @@ jobs:
           architecture: 'x64'
       - name: Install requirements.txt
         # Устанавливаем зависимости
-        run: pip install -r requirements.txt
+        run: pip install DevTools 5/ requirements.txt
       - name: Run tests
         # Запускаем тесты
         run: coverage run DevTools 5/TestCalc.py
