--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           python-version: '3.8'
           architecture: 'x64'
+      - name: Inital Depeneces
+        run: pip install /usr/bin/bash requirements.txt 
       - name: Run tests
         # Запускаем тесты
         run: coverage run DevTools 5/TestCalc.py
