--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,11 +5,11 @@ on:
     - main
 
 jobs:
-  run_tests:
-    runs-on: [ubuntu-latest]
+  build:
+    runs-on: windows-latest
     steps:
       # Чекаутим код
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       # Устанавливаем python нужной версии
       - uses: actions/setup-python@v1
         with:
