--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
         run: pip install coverage
       - name: Run tests
         # Запускаем тесты
-        run: coverage run -m TestCalc.py
+        run: coverage run TestCalc.py 
       - name: Tests report
         run: coverage report
 
