--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,6 @@ jobs:
         run: pip install coverage
       - name: Run tests
         # Запускаем тесты
-        run: coverage run C:\Users\User\Documents\ISRPO6\DevTools 5\TestCalc.py 
-      - name: Tests report
-        run: coverage report
+      - name: Link unittests
+        run: python TestCalc.py
 
